--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-files = "0.6.0"
+tokio = { varsion = "1", features = ["macros", "rt-multi-thread"]}
 mongodb = "2.2.1"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
