--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ actix-files = "0.6.0"
 tokio = { varsion = "1", features = ["macros", "rt-multi-thread"]}
 mongodb = "2.2.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.82"
 chrono = "0.4"
+handlebars = {version = "4.3.1", features = ["dir_source"]}
