--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.82"
 chrono = "0.4"
 handlebars = {version = "4.3.1", features = ["dir_source"]}
+random-string = "1.0.0"
