--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: "3.9"
 services:
   web:
+    container_name: projectk-api
     build: .
     ports:
       - "4586:8080"
     environment:
       - MONGODB_URI=mongodb://admin:admin@127.0.0.1:27017/url-shortener
   mongodb:
+    container_name: projectk-mongodb
     image: mongo:5.0
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
