--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   web:
+    container_name: projeck-server
     image: evolvingsoftware/business-management-api
     ports:
       - "8844:8844"
@@ -10,6 +11,7 @@ services:
     ports:
       - "27017:27017"
   redis:
+    container_name: projectk-redis
     ports:
       - "6379:6379"
     image: redis:5.0
