--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.82"
 chrono = "0.4"
 handlebars = {version = "4.3.1", features = ["dir_source"]}
 random-string = "1.0.0"
+env_logger = "0.9.0"
