--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ chrono = "0.4"
 handlebars = {version = "4.3.1", features = ["dir_source"]}
 random-string = "1.0.0"
 env_logger = "0.9.0"
+actix-web-middleware-keycloak-auth = "0.4.0"
+paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base", "actix-files", "codegen", "cli"] }
