--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "url_shortener"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,8 +13,8 @@ mongodb = "2.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.82"
 chrono = "0.4"
-handlebars = {version = "4.3.1", features = ["dir_source"]}
 random-string = "1.0.0"
 env_logger = "0.9.0"
 actix-web-middleware-keycloak-auth = "0.4.0"
 paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base", "actix-files", "codegen", "cli"] }
+keycloak = "19.0.101"
