--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   web:
     container_name: evolving_solutions_url_shortener_api
-    image: evolvingsoftware/evolving_solutions_url_shortener_api
+    image: evolvingsoftware/evolving_solutions_url_shortener_api:alpha
     ports:
       - "8080:8080"
   mongodb:
