--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ env_logger = "0.9.0"
 actix-web-middleware-keycloak-auth = "0.4.0"
 paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base", "actix-files", "codegen", "cli"] }
 keycloak = "19.0.101"
+local-ip-address = "0.4.7"
