--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: evolvingsoftware/evolving_solutions_url_shortener_api:alpha
     ports:
       - "8844:8844"
+    environment:
+      - BASE_URL=https://evolveurl.co
   mongodb:
     container_name: mongodb
     image: mongo:5.0
