--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-files = "0.6.0"
-tokio = { varsion = "1", features = ["macros", "rt-multi-thread"]}
-mongodb = "2.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.82"
 chrono = "0.4.5"
@@ -20,4 +18,9 @@ paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base
 keycloak = "19.0.101"
 local-ip-address = "0.4.7"
 futures = "0.3.23"
+dotenv = "0.15.0"
 
+[dependencies.mongodb]
+version = "2.3.0"
+default-features = false
+features = [ "bson-chrono-0_4", "sync", "async-std-runtime"]
