--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://admin:admin@localhost:27017/evolving_solutions?authSource=admin
+MONGODB_URI=mongodb://localhost:27017/evolving_solutions?authSource=admin
