--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,15 @@ services:
     # add user and password to mongodb
     environment:
       - MONGO_INITDB_DATABASE=evolving_solutions
+  jenkins_slave:
+    container_name: jenkins_slave
+    image: jenkins/jenkins:lts
+    ports:
+      - "8080:8080"
+    environment:
+      - JENKINS_SLAVE_HOME=/var/jenkins_home
+      - JENKINS_URL=http://jenkins.evolvingsoftware.io
+      - JENKINS_USERNAME=jenkins
+      - JENKINS_PASSWORD=jenkins
+      - JENKINS_EXECUTORS=1
+      - JENKINS_OPTS=-fs /jenkins_home
